[userpages ShareSidebar] Fix placeholder text misaligned in Safari.

--- a/app/src/userpages/components/ShareSidebar/ShareSidebar.pcss
+++ b/app/src/userpages/components/ShareSidebar/ShareSidebar.pcss
@@ -54,6 +54,7 @@
 
   .input {
     font-size: 14px;
+    line-height: normal;
   }
 
   .button {
